// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<RoomListItemView /> should be selected if isSelected=true 1`] = `
<DocumentFragment>
  <button
    aria-label="Open room room1"
    aria-posinset="1"
    aria-selected="true"
    aria-setsize="1"
    class="_flex_4dswl_9 mx_RoomListItemView mx_RoomListItemView_selected"
    role="option"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    tabindex="-1"
    type="button"
  >
    <span
      aria-label="Avatar"
      class="_avatar_1qbcf_8 mx_BaseAvatar"
      data-color="3"
      data-testid="avatar-img"
      data-type="round"
      style="--cpd-avatar-size: 32px;"
    >
      <img
        alt=""
        class="_image_1qbcf_41"
        data-type="round"
        height="32px"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="http://this.is.a.url/avatar.url/room.png"
        width="32px"
      />
    </span>
    <div
      class="_flex_4dswl_9 mx_RoomListItemView_content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: space-between; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="mx_RoomListItemView_text"
      >
        <div
          class="mx_RoomListItemView_roomName"
          title="room1"
        >
          room1
        </div>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<RoomListItemView /> should display notification decoration 1`] = `
<DocumentFragment>
  <button
    aria-label="Open room room1"
    aria-posinset="1"
    aria-selected="false"
    aria-setsize="1"
    class="_flex_4dswl_9 mx_RoomListItemView"
    role="option"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    tabindex="-1"
    type="button"
  >
    <span
      aria-label="Avatar"
      class="_avatar_1qbcf_8 mx_BaseAvatar"
      data-color="3"
      data-testid="avatar-img"
      data-type="round"
      style="--cpd-avatar-size: 32px;"
    >
      <img
        alt=""
        class="_image_1qbcf_41"
        data-type="round"
        height="32px"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="http://this.is.a.url/avatar.url/room.png"
        width="32px"
      />
    </span>
    <div
      class="_flex_4dswl_9 mx_RoomListItemView_content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: space-between; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="mx_RoomListItemView_text"
      >
        <div
          class="mx_RoomListItemView_roomName"
          title="room1"
        >
          room1
        </div>
      </div>
      <div
        aria-hidden="true"
        class="_flex_4dswl_9"
        data-testid="notification-decoration"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: var(--cpd-space-1x); --mx-flex-wrap: nowrap;"
      >
        <svg
          fill="var(--cpd-color-icon-accent-primary)"
          height="20px"
          viewBox="0 0 24 24"
          width="20px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 4h10a2 2 0 0 1 2 2v4.286l3.35-2.871a1 1 0 0 1 1.65.76v7.65a1 1 0 0 1-1.65.76L18 13.715V18a2 2 0 0 1-2 2H6a4 4 0 0 1-4-4V8a4 4 0 0 1 4-4"
          />
        </svg>
        <span
          class="_unread-counter_9mg0k_8"
        >
          1
        </span>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<RoomListItemView /> should render a room item 1`] = `
<DocumentFragment>
  <button
    aria-label="Open room room1"
    aria-posinset="1"
    aria-selected="false"
    aria-setsize="0"
    class="_flex_4dswl_9 mx_RoomListItemView"
    role="option"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    tabindex="-1"
    type="button"
  >
    <span
      aria-label="Avatar"
      class="_avatar_1qbcf_8 mx_BaseAvatar"
      data-color="3"
      data-testid="avatar-img"
      data-type="round"
      style="--cpd-avatar-size: 32px;"
    >
      <img
        alt=""
        class="_image_1qbcf_41"
        data-type="round"
        height="32px"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="http://this.is.a.url/avatar.url/room.png"
        width="32px"
      />
    </span>
    <div
      class="_flex_4dswl_9 mx_RoomListItemView_content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: space-between; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="mx_RoomListItemView_text"
      >
        <div
          class="mx_RoomListItemView_roomName"
          title="room1"
        >
          room1
        </div>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<RoomListItemView /> should render a room item with a message preview 1`] = `
<DocumentFragment>
  <button
    aria-label="Open room room1"
    aria-posinset="1"
    aria-selected="false"
    aria-setsize="1"
    class="_flex_4dswl_9 mx_RoomListItemView"
    role="option"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    tabindex="-1"
    type="button"
  >
    <span
      aria-label="Avatar"
      class="_avatar_1qbcf_8 mx_BaseAvatar"
      data-color="3"
      data-testid="avatar-img"
      data-type="round"
      style="--cpd-avatar-size: 32px;"
    >
      <img
        alt=""
        class="_image_1qbcf_41"
        data-type="round"
        height="32px"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="http://this.is.a.url/avatar.url/room.png"
        width="32px"
      />
    </span>
    <div
      class="_flex_4dswl_9 mx_RoomListItemView_content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: space-between; --mx-flex-gap: var(--cpd-space-2x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="mx_RoomListItemView_text"
      >
        <div
          class="mx_RoomListItemView_roomName"
          title="room1"
        >
          room1
        </div>
        <div
          class="mx_RoomListItemView_messagePreview"
          title="The message looks like this"
        >
          The message looks like this
        </div>
      </div>
    </div>
  </button>
</DocumentFragment>
`;
